--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,8 @@
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
