--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "build": "node index.js",
-    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,5 +22,8 @@
     "graphql": "^16.6.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
