refactor: rename app.js to index.js

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "graphql-project",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +24,6 @@
     "mongoose": "^6.7.2"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   }
 }
